# kursus

./: basis.md  basis_træning.md  bitvis sammenligninger.md  fastDemo.py  git training.md  git.md  logging.md  logsetup.py  net.md  parantes quiz.md  performance.md  pyproject.toml  python_opgave_mad.md  quiz_order.py  requirements.txt  samlet_eksempel.py  sammenligninger.md  struktur.md  test_kode.md  test_med_github.md
.github/workflows/: run_pip.yaml  run_uv.yaml
eksempel/: data.py  start.py  vis.py
eksempel/tests/: test_data.py
klasse_eksempel/: Foedevare.py  FoedevareParameter.py  data.py
