[project]
name = "kursus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "fastexcel>=0.18.0",
    "gql[all]>=4.0.0",
    "ipykernel>=7.1.0",
    "polars>=1.37.1",
    "pytest>=9.0.3",
]
